# Adaptive-Boss-RL

./: .gitignore  CLAUDE.md  LICENSE
adaptive_boss/: Adaptive_Boss_Train.ipynb  BLOG.md  README.md  __init__.py  client.py  generate_plots.py  generate_trl_plot.py  models.py  openenv.yaml  play.py  pyproject.toml  requirements.txt  train.py  train_trl.py
adaptive_boss/game/: __init__.py  entities.py  game_logic.py  renderer.py
adaptive_boss/logs/: training_log.json  trl_training_log.json  trl_training_log_eval.json
adaptive_boss/models/: boss_policy.pt
adaptive_boss/models/boss_policy_trl/: config.json  generation_config.json  model.safetensors  tokenizer.json
adaptive_boss/rl/: __init__.py  online_adapter.py  policy.py  trainer.py
adaptive_boss/server/: Dockerfile  __init__.py  app.py  environment.py  requirements.txt
