[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive_boss"
version = "0.1.0"
description = "Adaptive Boss — an OpenEnv RL environment where the boss learns to counter player cheese strategies."
requires-python = ">=3.10"
authors = [
    { name = "OpenEnv Hackathon Team" },
]
dependencies = [
    "openenv-core[core]>=0.2.2",
    "fastapi>=0.115.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "pygame==2.5.2",
    "matplotlib>=3.7.0",
]

[project.scripts]
# `server` is the canonical entry-point name OpenEnv's deploy validator looks for.
# Path uses Space-layout imports (`server.app`) since the deployed Space repo
# has env contents at root, with /app on PYTHONPATH inside the container.
server = "server.app:main"
adaptive-boss-server = "adaptive_boss.server.app:main"

[tool.setuptools]
include-package-data = true
packages = [
    "adaptive_boss",
    "adaptive_boss.game",
    "adaptive_boss.rl",
    "adaptive_boss.server",
]
[tool.setuptools.package-dir]
"adaptive_boss" = "."
"adaptive_boss.game" = "game"
"adaptive_boss.rl" = "rl"
"adaptive_boss.server" = "server"
